CI: Update Offer.java to restrain Kilo offers possibility